# doc-talk

./: .gitignore  CLAUDE.md  PLAN.md  README.md  alembic.ini  doctalk.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_pdf_structure.py  0003_images.py  0004_figures.py  0005_relations.py  0006_synthesis.py  0007_resolve.py  0008_unmerge_manifest.py  0009_slug_override.py
docs/: entity-resolution.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: Answer.tsx  App.tsx  answerStore.ts  api.ts  cache.test.ts  cache.ts  styles.css  useFetch.ts
frontend/src/components/: Plate.tsx
frontend/src/routes/: Chat.tsx  Compare.tsx  Doc.tsx  Entity.tsx  Gallery.tsx  Jobs.tsx  Library.tsx  Maintenance.tsx  NotFound.tsx  PageView.tsx  Passage.tsx  Query.tsx  Reader.tsx  Search.test.tsx  Search.tsx  Source.tsx  Wiki.tsx
frontend/src/test/: setup.ts
src/doctalk/: __init__.py  config.py  hashing.py  textfilter.py
src/doctalk/api/: __init__.py  app.py  json_api.py  maintenance.py  wikimd.py
src/doctalk/cli/: __init__.py  main.py
src/doctalk/cluster/: __init__.py  grouping.py
src/doctalk/db/: __init__.py  models.py  repo.py  session.py
src/doctalk/ingest/: __init__.py  dag.py  pipeline.py  resync.py
src/doctalk/models/: __init__.py  chat.py  embed.py  ocr.py  rerank.py  vlm.py
tests/: conftest.py  test_cluster.py  test_dag_idempotency.py  test_dedupe.py  test_disambiguate.py  test_docx.py  test_heading_detect.py  test_hybrid.py  test_image_extract.py  test_json_api.py  test_link_semantic.py  test_lint.py  test_maintenance_api.py  test_merge.py  test_ocr.py  test_pdf_assets.py  test_pdf_structure.py  test_promote_loop.py  test_prompt.py  test_prune.py  test_relabel.py  test_rerank.py  test_resolve.py  test_resync.py  test_retriever.py  test_synth.py  test_synth_integrate.py  test_synth_source.py  test_synth_topics.py  test_web.py  test_wikichat.py  test_wikimd.py
(+60 files in other folders)
