[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doctalk"
version = "0.0.0"
description = "Fully-local drop-files -> wiki + chat your data knowledge base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "blake3>=0.4",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyMySQL>=1.1",
    "PyMuPDF>=1.23",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
doctalk = "doctalk.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/doctalk"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
